--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -308,6 +308,7 @@ html {
   display: table-cell;
   vertical-align: middle;
   position: relative;
+  overflow-x: hidden;
 }
 .hero-content h1 {
   width: 100%;
@@ -472,6 +473,7 @@ html {
 @media only screen and (max-width: 767px) {
   .site-section {
     padding: 60px 0;
+    overflow-x: hidden;
   }
   .site-section h2 {
     font-size: 24px;
